distro/iptables_appliance.conf
# Firewall configuration managed by conary
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOM0-INPUT - [0:0]
:DOMU-INPUT - [0:0]
:DOMU-FORWARD - [0:0]
:DOMU-OUTPUT - [0:0]

# universal input rules
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp --icmp-type any -j ACCEPT
-A INPUT -i vif+ -j DOMU-INPUT
-A INPUT -j DOM0-INPUT

# traffic directed from domUs to dom0
# http for rBuilder
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
# https for rBuilder
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
# http for jobmaster's SimpleHTTPServer
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 8000 -j ACCEPT
# stomp protocol for messaging
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 61613 -j ACCEPT

# nfs for now
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 4000:4003 -j ACCEPT
-A DOMU-INPUT -m state --state NEW -m udp -p udp --dport 4000:4003 -j ACCEPT
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 2049 -j ACCEPT
-A DOMU-INPUT -m state --state NEW -m udp -p udp --dport 2048 -j ACCEPT
-A DOMU-INPUT -m state --state NEW -m tcp -p tcp --dport 111 -j ACCEPT
-A DOMU-INPUT -m state --state NEW -m udp -p udp --dport 111 -j ACCEPT
-A DOMU-INPUT -j REJECT --reject-with icmp-host-prohibited

# traffic directed from external network to dom0
# ssh
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
# http for rBuilder
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
# https for rBuilder
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
# https for rAPA
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 8003 -j ACCEPT
# http for rAPA
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 8004 -j ACCEPT
# SNMP
-A DOM0-INPUT -m state --state NEW -m tcp -p tcp --dport 161 -j ACCEPT
# SNMP
-A DOM0-INPUT -m state --state NEW -m udp -p udp --dport 161 -j ACCEPT
-A DOM0-INPUT -j REJECT --reject-with icmp-host-prohibited

# universal forward rules
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i vif+ -o eth0 -j DOMU-FORWARD

# forward rules for slaves to external network
# DNS
-A DOMU-FORWARD -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
-A DOMU-FORWARD -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
-A DOMU-FORWARD -j REJECT --reject-with icmp-host-prohibited

# traffic from dom0 to domU
-A OUTPUT -o vif+ -j DOMU-OUTPUT
-A DOMU-OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
# http for slave's SimpleHTTPServer
-A DOMU-OUTPUT -m state --state NEW -m udp -p udp --dport 8000 -j ACCEPT
-A DOMU-OUTPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT

*nat
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
